# mimirag

./: .gitignore  AUDIT_v0.1.0a1.md  AUDIT_v0.1.0a2.md  AUDIT_v0.1.0a3.md  CITATION.cff  LICENSE  NOTICE  README.md  S0_GATE.md  TODO_v0.2.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
bench/: RESULTS.md
poc/: s0_smoke.py
scripts/: honest_marketing_check.py  pre-commit
src/mimirag/: __init__.py  bench.py  cli.py  data.py  fusion.py  models.py  pipeline.py  protocols.py
src/mimirag/encoders/: __init__.py  bge.py  fake.py  mimi.py  whisper.py
src/mimirag/indexes/: __init__.py  faiss_index.py
tests/: conftest.py  test_bench.py  test_cli.py  test_encoders_registry.py  test_faiss_index.py  test_fake_encoder.py  test_fusion.py  test_honest_marketing.py  test_models.py  test_paired_diff_ci.py  test_pipeline.py  test_pool_guards.py  test_protocols.py  test_protocols_sample_rate.py  test_recall_denominator.py
