[project]
name = "mimirag"
version = "0.1.0a3"
description = "Audio-native RAG over Kyutai Mimi 12.5 Hz semantic tokens, with a 4-axis ablation against Whisper+BGE-M3 baselines."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "hinanohart" }]
keywords = ["rag", "retrieval", "audio", "mimi", "neural-audio-codec", "semantic-tokens"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "click>=8.1,<9.0",
    "pydantic>=2.6,<3.0",
    "numpy>=1.26,<3.0",
    "faiss-cpu>=1.8,<2.0",
    "soundfile>=0.12,<1.0",
]

[project.optional-dependencies]
mimi = [
    "torch>=2.2,<3.0",
    "transformers>=4.45,<5.0",
    "huggingface-hub>=0.24,<1.0",
]
text = [
    "sentence-transformers>=2.7,<5.0",
]
asr = [
    "openai-whisper>=20231117 ; sys_platform != 'win32'",
]
all = [
    "mimirag[mimi,text,asr]",
]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-cov>=5.0,<7.0",
    "hypothesis>=6.100,<7.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.5,<1.0",
    "pip-licenses>=4.4,<6.0",
]

[project.scripts]
mimirag = "mimirag.cli:main"

[project.urls]
Homepage = "https://github.com/hinanohart/mimirag"
Repository = "https://github.com/hinanohart/mimirag"
Issues = "https://github.com/hinanohart/mimirag/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mimirag"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004", "PLR0912", "PLR0915", "PLR0911"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["faiss.*", "soundfile.*", "whisper.*", "transformers.*", "sentence_transformers.*", "torch.*", "huggingface_hub.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"
markers = [
    "slow: tests that are slow (>5s)",
    "live: tests that hit the network or require model weights",
]

[tool.coverage.run]
source = ["src/mimirag"]
branch = true
omit = [
    # Real backends require model weights and are only exercised by
    # @pytest.mark.live tests, which the default CI matrix skips. They
    # remain version-controlled and lint-checked.
    "src/mimirag/encoders/mimi.py",
    "src/mimirag/encoders/whisper.py",
    "src/mimirag/encoders/bge.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
